# plum-claims-pipeline

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  flow.html  policy_rules.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  composition.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  contradiction_detection.py  decision_synthesizer.py  document_verification.py  extraction.py  extraction_validator.py  financial_calculation.py  fraud_detection.py  intake.py  policy_adjudication.py
backend/app/api/: claims.py  eval.py  members.py
backend/app/application/: __init__.py  pipeline.py  recorder.py
backend/app/decision/: __init__.py  confidence.py  explanation_builder.py
backend/app/domain/: __init__.py  errors.py
backend/app/graph/: __init__.py  pipeline.py
backend/app/infrastructure/: __init__.py
backend/app/interfaces/: __init__.py
backend/app/llm/: __init__.py  base.py  factory.py  gemini.py  mock.py
backend/app/models/: __init__.py  agent_result.py  claim.py  cost.py  decision.py  evidence.py  explanation.py
backend/app/policy/: __init__.py  coverage.py  exclusions.py  loader.py  pre_auth.py  rules.py  waiting_periods.py
backend/app/storage/: __init__.py  db.py  models.py  repositories.py
backend/app/trace/: __init__.py  recorder.py
backend/eval/: __init__.py  report.py  runner.py
backend/tests/: conftest.py
backend/tests/integration/: test_eval_cases.py  test_event_dispatch.py  test_extract_preview.py
backend/tests/unit/: test_confidence.py  (+15 more)
(+83 files in other folders)
